[tool.poetry]
name = "radio-station"
version = "0.1.0"
description = ""
authors = ["chottokun"]
readme = "README.md"
packages = [{include = "radio_station"}]

[tool.poetry.dependencies]
python = "^3.11"
nicegui = "^0.9.25"
streamlink = "^5.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
